Vue - messages order improvement, but alignment to be fixed and 'Samuele" and "Davide" chatroom are to be fixed

--- a/css/style.css
+++ b/css/style.css
@@ -190,6 +190,7 @@ div.ms_message.received{
 
 div.ms_message.sent{
     background-color: #D5F9BA;
+    align-self: flex-end;
 }
 
 
